[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[metadata]
name = "panthon"
version = "0.1.16"
url = "https://github.com/nripeshn/panthon"
author = "Nripesh Niketan"
author_email = "nripesh14@gmail.com"
description = "A Cybersecurity Attack Simulation Library"
long_description = "file: README.md"
long_description_content_type = "text/markdown"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]

[options]
packages = ["panthon"]
package_dir = {"" = "src"}
install_requires = [
    "torch",
    "scapy",
    "netifaces",
    "bs4",
    "tld",
    "fuzzywuzzy",
    "requests",
    "twisted"
]

[options.package_data]
panthon = ["data/*.txt"]
