[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "panthon"
version = "0.1.15"
authors = [{name = "Nripesh Niketan"}]
description = "A Cybersecurity Attack Simulation Library"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]

[options]
packages = "find:"
package_data = {"panthon" = ["data/*.txt"]}

[options.install_requires]
dependencies = [
    "torch",
    "scapy",
    "netifaces",
    "bs4",
    "tld",
    "fuzzywuzzy",
    "requests",
    "twisted"
]